1997-11-27  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* configure.in: Added code to enable GUILE_ISELECT on systems
	which have the necessary functions (gettimeofday, select).

	* acconfig.h: Added GUILE_ISELECT.

1997-11-24  Tim Pierce  <twp@twp.tezcat.com>

	* acinclude.m4: Assume dlsym does not add underscore if
 	cross-compiling.
	* aclocal.m4, configure: Regenderated.

1997-11-21  Tim Pierce  <twp@twp.tezcat.com>

	* acinclude.m4 (GUILE_DLSYM_USCORE): New macro, thanks Dan Hagerty
	<hag@ai.mit.edu>.
	* configure.in: Use it.
	* configure: Regenerated.
	* acconfig.h (DLSYM_ADDS_USCORE): New #define.
	
1997-10-26  Mikael Djurfeldt  <mdj@nada.kth.se>

	* README (libtool): Tell people to use version 1.0e.

Sat Oct 25 02:50:43 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	Call the QuickThreads library libqthreads.a, not libqt.a.  The old
	name conflicts with the Qt user interface toolkit.
	* threads.m4 (CY_AC_WITH_THREADS): Use new library name.
	* configure.in: Same.
	* aclocal.m4, configure: Regenerated.

Thu Oct 23 00:58:06 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* configure.in: Check for the readline library, and the termcap
	library (on which readline relies).
	* configure: Regenerated.

Wed Oct 22 16:55:57 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	New libtool: 1.0e
	* ltconfig, ltmain.sh, config.sub, config.guess: Updated.
	* configure, aclocal.m4: Regenerated.

1997-10-02  Marius Vollmer  <mvo@zagadka.ping.de>

	Make dynamic linking work on Dec Unix. (Thanks to Clark McGrew)
	* configure.in: Check whether dlopen can be found without -ldl.

Mon Sep 29 23:52:52 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* Makefile.in: Regenerated with automake 1.2c.

Sat Sep 27 23:01:58 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* Makefile.am: Add new `build' subdirectory to SUBDIRS.
	* configure.in: Add build/Makefile to AC_OUTPUT clause.
	* Makefile.in, configure: Regenerated.

	* Makefile.in, aclocal.m4: Regenerated with automake 1.2a.
