@@ -1,3 +1,7 @@
+1997-12-01  Tim Pierce  <twp@skepsis.com>
+
+	* acconfig.h: Add USCORE.
+
 1997-11-27  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* configure.in: Added code to enable GUILE_ISELECT on systems
